美团工作日志1.26-1.30

--- a/美团/2026/1.26-1.30.md
+++ b/美团/2026/1.26-1.30.md
@@ -1,3 +1,8 @@
+1.26
 动态布局思路：（用于首页瓷片区动态卡）
 向后端请求数据，后端返回一个template压缩包链接，内容为动态布局xml
 由Parser类对返回的数据进行处理，将上述xml分发给具体卡片模版类进行渲染、绑定事件
+
+1.27
+消费事件而不处理：直接在对应handleEvent方法中返回true
+例如：卡片自带点击逻辑，添加长按逻辑后，如果长按并抬起，就会既识别出长按，又识别出点击。此时可直接消费掉点击事件。
