美团工作日志26-01-28

--- a/美团/2026/1.26-1.30.md
+++ b/美团/2026/1.26-1.30.md
@@ -1,3 +1,22 @@
+当前进度
+负反馈弹窗相关任务
+1.问题：
+（1）长按卡片：既识别出长按，又识别出点击 （已解决）
+（2）有些卡片带有子卡片(对应slots，例如火车站卡)，若长按位置在子卡片上，则圆圈出现在子卡片中心，而不是整个卡片中心（已解决）
+（3）登录状态，切换到后台，卡片自动消失，刷新后出现 （正常现象）
+
+2.点击关闭卡片按钮逻辑 
+若用户未登录，跳转到登录界面（完成）
+若用户已登录，调用api并关闭卡片（未完成）
+
+3.点击跳转按钮逻辑 （完成）
+
+4.埋点
+显示弹窗MV （完成）
+点击按钮MC （完成）
+
+5.如果弹窗超出底部tab，在上方展示弹窗(完成)
+
 1.26
 动态布局思路：（用于首页瓷片区动态卡）
 向后端请求数据，后端返回一个template压缩包链接，内容为动态布局xml
@@ -6,3 +25,32 @@
 1.27
 消费事件而不处理：直接在对应handleEvent方法中返回true
 例如：卡片自带点击逻辑，添加长按逻辑后，如果长按并抬起，就会既识别出长按，又识别出点击。此时可直接消费掉点击事件。
+
+1.28
+订单卡、瓷片区
+negFeedbackCode：位于对应卡片信息中
+
+代码中，hideCloseButton、supportLongPress取值同negFeedbackCode
+1-隐藏关闭按钮、支持长按；0-显示关闭按钮，不支持长按
+OrderSmartData中声明hideCloseButton变量
+OrderSmartParser中将hideCloseButton变量设置为item.negFeedbackCode
+
+瓷片区：
+CommonModuleGroupParser中获取item.negFeedbackCode
+
+瓷片区有些卡片带有子卡，长按时要用View itemView = item.viewHolder.itemView;获取当前卡片，如果直接用view，获取到的可能是子卡
+
+
+**订单卡DynamicCardLayout 关闭逻辑梳理（用到lambda表达式）**：
+
+DynamicCardLayout 实现了ICloseableCard接口，实现了其中的setCloseListener(OnItemCloseListener listener)方法(@Override)
+
+OrderSmartPager实现了OnItemCloseListener接口，因此OrderSmartPager对象可传入setCloseListener()方法中
+
+OrderSmartPager >> initAllScreen()方法中，实际调用了卡片布局对象layout的setCloseListener()方法，此时layout的closeListener已初始化。
+
+DynamicCardLayout  >> ensureSettlePresenter()方法返回一个DynamicLayoutPresenter对象。
+
+（DynamicLayoutPresenter构造器参数：context, moduleName, controllerFactory, layoutLoader, listener）
+
+ensureSettlePresenter()方法中，主体部分() -> {…}是一个controllerFactory的实例（解释：以上为lambda表达式写法。类controllerFactory实现LayoutControllerFactory接口，这个接口只有一个抽象方法createLayoutController()，属于函数式接口，可直接用“这个方法的实现”来代替“实现这个接口的类的实例”）
