美团工作日志1.26-1.30

--- a/美团/2026/1.26-1.30.md
+++ b/美团/2026/1.26-1.30.md
@@ -54,3 +54,9 @@ DynamicCardLayout  >> ensureSettlePresenter()方法返回一个DynamicLayoutPre
 （DynamicLayoutPresenter构造器参数：context, moduleName, controllerFactory, layoutLoader, listener）
 
 ensureSettlePresenter()方法中，主体部分() -> {…}是一个controllerFactory的实例（解释：以上为lambda表达式写法。类controllerFactory实现LayoutControllerFactory接口，这个接口只有一个抽象方法createLayoutController()，属于函数式接口，可直接用“这个方法的实现”来代替“实现这个接口的类的实例”）
+
+1.29
+图片裁剪优化：使用Picasso.transform() 。
+优点：
+1.此时转换操作会在后台线程执行，不会阻塞主线程。因此，图像加载和转换是异步执行的，有利于 UI 流畅。
+2.Picasso 会自动回收不再使用的位图，避免内存泄漏问题。它会根据需要缓存图片并在合适的时机回收。使用 Picasso 时，内存管理更智能，它会根据图片的尺寸和加载的上下文，避免内存溢出，降低OOM风险。
