美团工作日志26-01-30

--- a/美团/2026/1.26-1.30.md
+++ b/美团/2026/1.26-1.30.md
@@ -60,3 +60,42 @@ ensureSettlePresenter()方法中，主体部分() -> {…}是一个controllerFac
 优点：
 1.此时转换操作会在后台线程执行，不会阻塞主线程。因此，图像加载和转换是异步执行的，有利于 UI 流畅。
 2.Picasso 会自动回收不再使用的位图，避免内存泄漏问题。它会根据需要缓存图片并在合适的时机回收。使用 Picasso 时，内存管理更智能，它会根据图片的尺寸和加载的上下文，避免内存溢出，降低OOM风险。
+
+1.30
+原始代码结构： （三个反引号+语言名称 插入高亮代码块）
+```java
+Picasso.with(context)
+	.load(…) // 后台线程中异步加载图像资源
+	.into(new PicassoDrawableTarget() {
+		@Override
+		// 加载成功后，在主线程执行此方法
+		public void onResourceReady(…) {
+			// 图片裁剪逻辑
+			// 图片显示
+		}
+	});
+```
+
+图片裁剪主要逻辑：
+Bitmap.createBitmap(bitmap, 0, 0, bitmap.getWidth(), imgShowHeight, null, false)
+解释：
+bitmap: 原图
+0，0: 裁剪区域左上角坐标，表示从原图左上角裁剪
+bitmap.getWidth(), imgShowHeight：裁剪区域宽高
+null：不做线性变换
+false：不做抗锯齿处理
+
+优化后代码结构：
+```java
+Picasso.with(context)
+	.load(…) // 后台线程中异步加载图像资源
+	.transform() {
+		// 后台线程中执行图片裁剪逻辑
+	}
+	.into(new PicassoDrawableTarget() {
+		@Override
+		public void onResourceReady(…) {
+			// 主线程中仅执行图片显示
+		}
+	});
+```
