美团工作日志26-02-05

--- a/美团/2026/2.2-2.6.md
+++ b/美团/2026/2.2-2.6.md
@@ -10,3 +10,12 @@
 参考面板中的“首页订单卡”选项：OrderSmartDebugFragment.java
 
 pt（point）与px换算：一般用DPI（每英寸点数）换算
+
+2.3
+
+2.4
+在图像处理过程中，一段时间内原图和新图在内存中并存，图像处理属于“内存密集型”任务。
+
+android开发中，主线程即为UI线程，负责View绑定、复用等任务。如果在主线程中裁剪图片，裁剪过程中主线程阻塞，同时还在触发更多图片的请求与解码，更容易造成回调与请求堆积，导致“原图片、裁剪后的新图片、其他图片”在较长一段时间同时在内存中，增大内存峰值，且这个时间不易控制，增大OOM风险。
+
+使用Picasso.transform(), 可在Picasso的后台线程池中取一个后台线程来执行图像裁剪任务（异步处理），原图片和裁剪后的新图片只会这个后台线程中短暂同时存在，生命周期更可控，在当处理完成时可以更及时地解除引用（可被gc回收），必要时recycle source（source原图、result处理结果），最后回到主线程执行into()的设置操作。
