美团工作日志26-02-11

--- a/美团/2026/2.9-2.14.md
+++ b/美团/2026/2.9-2.14.md
@@ -30,3 +30,24 @@ Picasso.with(targetImageView.getContext())
 	.transform() // 自定义变换，可返回处理后的bitmap
 	.into(targetImageView) // 先把bitmap自动封装成PicassoDrawable，再进行绘制
 ```
+裁剪原始逻辑：
+onResourceReady(PicassoDrawable picassoDrawable, Picasso.LoadedFrom from)
+参数：
+picassoDrawable：可绘制对象，继承自Drawable，可通过传入setImageDrawable()绘制在一个ImageView上
+from: 图片来源，磁盘缓存/内存缓存/网络加载，此处没用到
+
+2.11
+背景图高度控制
+原始：
+minItemHeight： 图标最小高度
+minRowCount： 最小行数
+minPageHeight = minItemHeight * minRowCount： 总高度
+imgShowHeight = Math.min(minPageHeight, imgMaxHeightPx)：背景图最大高度，需要根据这个值裁剪
+
+卡片有大于1/2的高度不显示时，不处理长按事件
+获取真实view：
+View realView = NegBackManager.getRealView(item, engine);
+
+
+
+
