--- a/个人项目/参考.md
+++ b/个人项目/参考.md
@@ -6,4 +6,5 @@ bettafish https://github.com/666ghj/BettaFish/tree/main
 
 clawd bot(openclaw) https://github.com/openclaw/openclaw
 
-ai api hub
+api-hub.ai
+
