美团工作日志26-02-13

--- a/美团/2026/2.9-2.14.md
+++ b/美团/2026/2.9-2.14.md
@@ -52,6 +52,13 @@ View realView = NegBackManager.getRealView(item, engine);
 android开发中，onConfigurationChanged方法用于相应配置变化事件，例如：横屏转竖屏、折叠屏手机大小屏切换、语言变化等。位于MainActivity.java
 （详细内容：见“MainActivity方法梳理”）
 
+2.13
+查看崩溃日志：根据给出的筛选条件，在raptor选择实时列表
+uuid：0000000000000A4B85E79B28D466492A342A81150F182B175735338204895080
+
+java.util.ConcurrentModificationException at java.util.ArrayList$Itr.next(ArrayList.java:860) at com.meituan.android.dynamiclayout.controller.event.GroupEventDispatcher.handleEvent(SourceFile:3) at com.meituan.android.dynamiclayout.controller.event.PageEventDispatcher.sendEvent(SourceFile:3) at com.meituan.android.dynamiclayout.controller.event.EventDispatcher.sendEvent(SourceFile:5) at com.meituan.android.dynamiclayout.controller.LayoutController.sendEvent(Unknown Source:2) at ...
+原因：可能是遍历list时，其他代码对list进行修改，常见于多线程环境中。
+
 
 
 
